[package]
name = "will_fuzzy"
version = "1.0.0"
edition = "2024"
default-run = "main"



[dependencies]
crossterm = "0.29.0"
itoa = "1.0.18"
ratatui = "0.30.0"
rust-ini = "0.21.3"
[profile.release]
# strip = true
debug = true
#

[features]
# default = ["logging"] 
logging = []

[[bin]]
name = "main"
path = "src/main.rs"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "algocomp"
harness = false
